updated the updates section

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -74,7 +74,7 @@
           <div class="lead mb-5">Department of Engineering Science, University of Oxford - OX1 3PJ
             &nbsp;&nbsp; <a href="mailto:name@email.com">sjetley@robots.ox.ac.uk</a>
           </div>
-          <p class="lead mb-5">I am a final year PhD student under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Prof. Philip Torr</a> generously funded by the <a href=https://epsrc.ukri.org/skills/students/ style="text-decoration:none">EPSRC research scholarship</a> to pursue research in 'AI for scene understanding' at the University of Oxford.</p>
+          <p class="lead mb-5">I am a final year PhD student under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Prof. Philip Torr</a> generously funded by the <a href=https://cordis.europa.eu/project/rcn/110460_en.html style="text-decoration:none">ERC research grant</a> to pursue research in 'AI for scene understanding' at the University of Oxford.</p>
 
           <p class="lead mb-5">My research covers the broad themes of computer vision, machine learning and deep learning. I have worked on topics of human saliency estimation, object recognition, instance segmentation and attention modelling in deep neural nets. My recent work focuses on explaining the adversarial phenomenon observed in deep neural networks for image classification. 
 </p>
@@ -103,6 +103,12 @@
         <div class="my-auto">
           <h2 class="mb-5">News</h2>
           <p class="lead mb-5">
+    10/18: Excited to be giving a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> 
+    jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. 
+    Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.<br />
+
+    10/18: Grateful to be receiving the WiML travel award, looking forward to the workshop.<br />
+    10/18: Grateful to be receiving the NIPS travel award.<br />
 
     09/18: Our paper explaining adversarial vulnerability in deep neural nets is accepted at NIPS'18. 
     (<a href="https://nips.cc/Conferences/2018/Schedule?showEvent=12016">With friends like these..</a>)<br />
@@ -117,7 +123,7 @@
     05/18: I am co-organising a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a>
      at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<br />
 
-    05/18: I am presenting my work at ICLR'18. Some highlights here.<br />
+    05/18: I am presenting my work at <a href=https://iclr.cc/Conferences/2018/Schedule?type=Poster>ICLR'18</a>. Some highlights <a href=./news/iclr.html>here</a>.<br />
 
     04/18: Grateful to be receiving <a href=https://www.stx.ox.ac.uk/about-st-cross>St. Cross</a> travel and research scholarship.<br />
 
