adding more tabs and data

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -52,13 +52,25 @@
             <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
+          <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#publications">Publications</a>
+          <a class="nav-link js-scroll-trigger" href="#datasets">Datasets</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#datasets">Datasets</a>
+          <a class="nav-link js-scroll-trigger" href="#talks">Talks</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#teaching">Teaching</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#admin">Admin/Review Work</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#outreach">Outreach</a>
+          </li>
+          <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
         </ul>
       </div>
@@ -130,16 +142,13 @@
     03/18: Grateful to be receiving the ICLR'18 travel award.<br />
 
     01/18: Our paper on learning attention in classification CNNs is accepted at ICLR'18. 
-    (<a href="https://openreview.net/forum?id=HyzbhfWRW"> Learn to pay attention!</a>) <br/>
-    
-    <br/>
+    (<a href="https://openreview.net/forum?id=HyzbhfWRW"> Learn to pay attention!</a>) 
+    <br/><br/>
     <a href='./news/about.html'>Older news</a>
-
     </p>
+    </div>
+    </section>
 
-        </div>
-
-      </section>
 
       <hr class="m-0">
 
@@ -191,31 +200,10 @@ The second is a clear demonstration of the tight coupling between classification
       [<a >demo:forthcoming</a>]<br/><br/></p><h6 class="mb-5"></h6>
 
 </ul>
+</div>
+</section>
 
-        </div>
-      </section>
 
-      <hr class="m-0">
-
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="teaching">
-        <div class="my-auto">
-          <h2 class="mb-5">Teaching</h2>
-
-        <h6 class="mb-4">Tutored for:</h6>
-          <ul  class="lead">
-            <li><a href="http://www.robots.ox.ac.uk/~fwood/teaching/B16_hilary_2013_2014/index.html">B16 course on Operating Systems (Hilary'16)</a><il>
-            <li><a href="http://www.robots.ox.ac.uk/~az/lectures/ia/index.html">B14 course on Image Analysis (Michaelmas'16)</a><il>
-            <li><a href="http://www.robots.ox.ac.uk/~sjrob/Teaching/B14_SP/b14_sp_lect1.pdf">B14 course on Signal Analysis (Hilary'17)</a><il>
-            <li>B14 course on Image Analysis (Exam Preparatory course, Trinity'17)<il>
-           </ul><br/>
-
-        <h6 class="mb-4">Laboratory demonstrator for:</h6>
-        <ul  class="lead">
-        <li><a href="http://www.eng.ox.ac.uk/~labejp/Courses/1P5/">P5 Matlab software programming course (Michaelmas'16, Hilary'17, Trinity'17)</a><il>
-        <li>B14 Lab course on Image Analysis (Hilary'17)<il>
-        </ul>
-
-      </section>
 
       <hr class="m-0">
 
@@ -306,24 +294,124 @@ The second is a clear demonstration of the tight coupling between classification
       [<a href="https://ieeexplore.ieee.org/document/6460142/">pdf</a>]
 
     </div>
+    </section>
 
-      </section>
+
 
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="datasets">
         <div class="my-auto">
           <h2 class="mb-5">Datasets</h2>
-
           <p class="lead">
       Long long time ago, I gathered a dataset of 'Country Flags in the Wild'. It comprises of
       12,854 train images and 6,110 test images of the flags of 224 different countries harvested from the world wide web and manually cropped to loosely fit to the inlying flags. More details can be found in this <a href="https://ieeexplore.ieee.org/abstract/document/6707635">paper</a>. 
-
       The dataset itself can be downloaded from <a href="/data/tvg/sjetley/">here</a>.
           </p>
-
         </div>
       </section>
+
+
+
+      <hr class="m-0">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="talks">
+        <div class="my-auto">
+        <h2 class="mb-5">Talks</h2>
+        <p class="lead mb-5">
+        10/18: I gave a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> 
+    jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. 
+    Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.<br />
+
+            : I gave a talk at the Cambridge office of FiveAI. Slides here. <br />
+
+            : I was an invited student speaker at the Deep Learning .
+
+    </p>
+    </section>
+
+
+
+
+      <hr class="m-0">
+
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="teaching">
+        <div class="my-auto">
+          <h2 class="mb-5">Teaching</h2>
+
+        <h6 class="mb-4">Tutored for:</h6>
+          <ul  class="lead">
+            <li><a href="http://www.robots.ox.ac.uk/~fwood/teaching/B16_hilary_2013_2014/index.html">B16 course on Operating Systems (Hilary'16)</a><il>
+            <li><a href="http://www.robots.ox.ac.uk/~az/lectures/ia/index.html">B14 course on Image Analysis (Michaelmas'16)</a><il>
+            <li><a href="http://www.robots.ox.ac.uk/~sjrob/Teaching/B14_SP/b14_sp_lect1.pdf">B14 course on Signal Analysis (Hilary'17)</a><il>
+            <li>B14 course on Image Analysis (Exam Preparatory course, Trinity'17)<il>
+           </ul><br/>
+
+        <h6 class="mb-4">Laboratory demonstrator for:</h6>
+        <ul  class="lead">
+        <li><a href="http://www.eng.ox.ac.uk/~labejp/Courses/1P5/">P5 Matlab software programming course (Michaelmas'16, Hilary'17, Trinity'17)</a><il>
+        <li>B14 Lab course on Image Analysis (Hilary'17)<il>
+        </ul>
+      </section>
+
+
+
+
+      <hr class="m-0">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="admin">
+        <div class="my-auto">
+        <h2 class="mb-5">Admin/Review Work</h2>
+        <p class="lead mb-5">
+        08/18: I am co-organising the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track 
+        at the <a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.<br />
+    </p>
+    </section>
+
+      <hr class="m-0">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="outreach">
+        <div class="my-auto">
+        <h2 class="mb-5">Outreach</h2>
+        <p class="lead mb-5">
+        06/18 - present: I am the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a>
+        with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2018-19.<br />
+
+        /18: Jasim Happa workshop <br />
+        /18: CS open day <br />
+    
+        05/18: I co-organised a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a>
+        at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<br />
+
+        06/17 - 05/18: I served as the Industry coordinator and External relations officer with 
+        <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2017-18. <br />
+
+        /17: I gave a talk for Women in Engineering day to  <br />
+        /17: I gave a talk as part of <br />
+
+        06/17 - 05/18: I served as the Industry coordinator and External relations officer with 
+        <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> for the academic year 2017-18. <br />
+        04/17: Late night London Science Museum Volunteer <br />
+        05/17: Late night London Science Museum Volunteer <br />
+
+
+
+    </p>
+    </section>
+
+
+      <hr class="m-0">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
+        <div class="my-auto">
+        <h2 class="mb-5">Awards</h2>
+        <p class="lead mb-5">
+        06/18: I will be the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a>
+        with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> 
+        for the academic year 2018-19. Our relationship history <a href="./news/oxwocs.html">here</a>!<br />
+
+        05/18: I am co-organising a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a>
+        at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<br />
+    </p>
+    </section>
+
+
 
     </div>
 
