updates to the awards and admin/review subsections

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -361,10 +361,14 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
         <h2 class="mb-5">Admin/Review Work</h2>
         <p class="lead mb-5">
-        08/18: I am co-organising the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track 
-        at the <a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.<br />
+        07/18: I reviewed for NIPS'18.<br/>
+        08/18: I co-organised the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track at the 
+<a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.<br />
+        10/18: I am reviewing for ICLR'19.<br />
     </p>
     </section>
+
+
 
       <hr class="m-0">
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="outreach">
@@ -402,14 +406,28 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
         <h2 class="mb-5">Awards</h2>
         <p class="lead mb-5">
-        06/18: I will be the <a href="https://www.cs.ox.ac.uk/societies/women/committee.html">outreach officer</a>
-        with <a href="https://www.cs.ox.ac.uk/societies/women/">OxWoCS</a> 
-        for the academic year 2018-19. Our relationship history <a href="./news/oxwocs.html">here</a>!<br />
+2017: <a href="https://www.pmb.ox.ac.uk/news/pembroke-team-win-tri-innovate-2017-innovative-audio-navigation-concept">Winner of the Tri-innovate challenge</a> - Oxford university annual innovation challenge for
+<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;identifying and supporting the most upcoming early-stage business ideas.
+<br />
 
-        05/18: I am co-organising a <a href = "https://www.hayfestival.com/p-13591-bushra-alahmadi-klaudia-krawiecka-saumya-jetley.aspx">coding workshop</a>
-        at the <a href="http://www.hayfestival.com/wales/home">Hay Science Festival</a>.<br />
-    </p>
-    </section>
+2016: Amongst the <a href="https://warwick.ac.uk/fac/sci/dcs/research/tia/her2contest/outcome">top-10 algorithms for breast cancer prognosis challenge</a> (lookout for Team HERcules). <br />
+
+2015: Best research intern for ‘End-to-end saliency prediction using deep learning’ project at 
+<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Xerox Research Centre Europe, Grenoble (now <a href="http://www.europe.naverlabs.com/NAVER-LABS-Europe/People/Naila-Murray">Naver Labs</a>).<br />
+
+2015: Received an Honorary Mention for Originality for the <a href="https://drive.google.com/file/d/0B-5KrfSltQrGSXBWYkpCbThjdjQ/view">Technical Essay entry</a> at the International 
+<br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Computer Vision Summer School'15.<br />
+
+2012: Best Performer– 2012 & Best Team – 2012 awardee at CDAC-Pune for outstanding research work.
+<br />
+
+2010: Runner Up in Most Innovative Projects category at National Technical Symposium – 
+<a href="http://pictinc.org/">Impetus & Concepts</a>'10.
+<br />
+
+2006: All India Rank 102 in 5th National Cyber Olympiad of the <a href="http://www.sofworld.org/nco">Science Olympiad Foundation</a>. <br />
+        </p>
+        </section>
 
 
 
