populated the content for talks subsection

--- a/startbootstrap-personal-profile/index.html
+++ b/startbootstrap-personal-profile/index.html
@@ -318,13 +318,20 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
         <h2 class="mb-5">Talks</h2>
         <p class="lead mb-5">
-        10/18: I gave a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> 
-    jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. 
+        10/18: I gave a talk on my research work and academic journey at an <a href="https://www.eventbrite.com/e/women-in-ai-advancing-your-research-tickets-50703045173?utm_campaign=reminder_attendees_48hour_email&utm_medium=email&utm_source=eb_email&utm_term=eventname#">event</a> jointly organised by <a href="https://www.joinef.com/">EF</a> and <a href="https://www.researcherscode.com/">Researc/hers code</a>. 
     Slides <a href="https://docs.google.com/presentation/d/13DurD8qbIuk28UCtX0VywebAmSjKnjOS82axhFQ9_4E/edit?usp=sharing">here</a>.<br />
 
-            : I gave a talk at the Cambridge office of FiveAI. Slides here. <br />
+        07/17: I gave a talk at the Cambridge office of <a href="https://five.ai/">FiveAI</a>. 
+        Slides <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing">
+        here</a>. 
+        Video link for the demo video on one of the 
+        slides is <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">here</a>.<br />
 
-            : I was an invited student speaker at the Deep Learning .
+        03/17: I was selected for a student talk at the 
+        <a href="http://workshops.inf.ed.ac.uk/deep/deep2017/">Deep Learning Workshop'17 in Edinburgh</a>. 
+        Access the <a href="https://www.youtube.com/watch?v=sTCY4JWPI4I">recording</a>, 
+        <a href="https://drive.google.com/file/d/1X_lZU-IkT2bdjyZ4QojfeGvodX_Tavde/view?usp=sharing">
+        slides</a>, and <a href="https://www.youtube.com/watch?v=zWZowrpaZ1c">demo</a>.<br/>
 
     </p>
     </section>
@@ -361,10 +368,10 @@ The second is a clear demonstration of the tight coupling between classification
         <div class="my-auto">
         <h2 class="mb-5">Admin/Review Work</h2>
         <p class="lead mb-5">
-        07/18: I reviewed for NIPS'18.<br/>
+        10/18: I am reviewing for ICLR'19.<br />
         08/18: I co-organised the <a href="http://www.deeplearningindaba.com/computer-vision-parallel-track.html">'Frontiers of Computer Vision'</a> track at the 
 <a href="http://www.deeplearningindaba.com/2018.html"> Deep Learning Indaba'18</a>.<br />
-        10/18: I am reviewing for ICLR'19.<br />
+        07/18: I reviewed for NIPS'18.<br/>        
     </p>
     </section>
 
